--- a/ClientApp/src/app/chess/chess.component.css
+++ b/ClientApp/src/app/chess/chess.component.css
@@ -36,7 +36,7 @@
       overflow-y: auto;
       overflow-x: hidden;
       height: calc(100vh - 18rem);
-      scrollbar-color: #888;
+      scrollbar-color: #888 #0000;
       scrollbar-width: thin;
     }
       .chess-body .chess-left .chess-note::-webkit-scrollbar {
